Restructured html. Moved hero els into main.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
             <a class="l-two">header link two</a>
             <a class="l-three">header link three</a>
         </nav>
-        <div class="title-container">
-            <h1>This website is awesome</h1>
-            <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h2>
-            <button><a href="https://www.signupwebpage.com">Sign up</a></button>
-        </div>
-        <img class="title-image" src="/images" alt="this image is empty placeholder until I find an image to use.">
     </header>
     <main class="info-container">
+        <div class="hero-section">
+            <div class="title-container">
+                <h1>This website is awesome</h1>
+                <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</h2>
+                <button><a href="https://www.signupwebpage.com">Sign up</a></button>
+            </div>
+            <img class="title-image" src="/images" alt="this image is empty placeholder until I find an image to use.">
+        </div>
         <div class="text-images-descriptions">
-            <h1>Some Random information</h1>
+            <h2>Some Random information</h2>
             <ul class="images-descriptions">
                 <li>
                     <img class="info-image" src="/images" alt="this image is empty placeholder until I find an image to use.">
