--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p>-Thor, God of Thunder</p>
         </div>>
-    </main>
-    <footer class="footer-container">
-        <div>
+        <div class="sign-up-container">
             <p>Call to action! It's time!</p>
             <p>Sign up for our product by clicking that button right over there!</p>
             <button><a href="https://www.signupwebpage.com">Sign up</a></button>
         </div>
+    </main>
+    <footer class="footer-container">
         <p>Copyright &copy; The Odin Project 2021</p>
     </footer>
     
