added class. Moved <p>'s into new container.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <p>-Thor, God of Thunder</p>
         </div>>
         <div class="sign-up-container">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="text-container">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
             <button><a href="https://www.signupwebpage.com">Sign up</a></button>
         </div>
     </main>
